src/components/horizontal-slider/horizontalSlider.scss
@import "../../variables";

.horizontal-slider {
  position: relative;
  height: 12rem;
  margin-top: 2rem;
  background-color: rgba(88, 163, 13, 0.65);
  perspective: 600px;

  ul.slider {
    position: absolute;
    display: flex;
    height: 100%;
    margin: 0;
    padding: 0.5rem 1rem;
    transition: all .8s ease;

    &.dragging {
      transition: all 0s;
    }

    li {
      position: relative;
      width: 8rem;
      padding: 0;
      list-style: none;
      transition: all 0.8s ease, width 0s 0.2s;

      + li {
        margin-left: 1rem;
      }

      .front, .back {
        position: absolute;
        top: 0;
        left: 0;
        overflow: hidden;
        width: 100%;
        height: 100%;
        padding: 0.5rem;
        transition: inherit;
        text-overflow: ellipsis;
        border-radius: 10px;
        background: rgb(206, 154, 10);
        backface-visibility: hidden;
        @include drop-shadow(0px 2px 4px clr(shadow));

        &.back {
          z-index: -1;
          transform: rotateY(180deg);
          background: rgb(52, 52, 46);
        }
      }

      // TODO: Improve the glitch with this animation
      &:hover {
        z-index: 2;
        transform: scale(1.3);

        .front {
          z-index: -1;
          transform: rotateY(180deg);
        }

        .back {
          z-index: unset;
          width: 160%;
          transform: rotateY(0);
        }
      }
    }
  }
}

